--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1211,6 +1211,131 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ZMhjdqxVfwDL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "74fc08e2-fdf1-4ebb-c44c-d9055f5f2884"
+      },
+      "source": [
+        "b=np.arange(12).reshape(3,4)\n",
+        "b"
+      ],
+      "execution_count": 177,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2,  3],\n",
+              "       [ 4,  5,  6,  7],\n",
+              "       [ 8,  9, 10, 11]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 177
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DBlUEzRlgDuD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "eefbf43c-a466-437e-a795-25533d5b6ebd"
+      },
+      "source": [
+        "b.sum(axis=0)"
+      ],
+      "execution_count": 178,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([12, 15, 18, 21])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 178
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F7HT5PShgKvP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a6e5c4cb-92f2-4c96-ee3a-2cece49b02d6"
+      },
+      "source": [
+        "b.min(axis=1)"
+      ],
+      "execution_count": 179,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 4, 8])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 179
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VK-BBvZAgQnY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "528d7235-b517-44de-9e4a-f2cd4a7a168f"
+      },
+      "source": [
+        "b.cumsum(axis=1)"
+      ],
+      "execution_count": 180,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  3,  6],\n",
+              "       [ 4,  9, 15, 22],\n",
+              "       [ 8, 17, 27, 38]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 180
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "pDn1Kd-uZDxf",
         "colab_type": "code",
         "colab": {
